<resources>
    <string name="app_name">文本标注平台</string>
    <string name="title_home">发任务</string>
    <string name="title_dashboard">做任务</string>
    <string name="title_notifications">任务管理</string>
    <string name="title_activity_login">登录</string>
    <string name="main_page">主页</string>
    <string name="mange_information">个人信息</string>
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">用户名格式不正确</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_logo">LogoActivity</string>
    <string name="title">标题:</string>
    <string name="content">内容:</string>
    <string name="title2">无标题:</string>
    <string name="time">年/月/日 时间</string>
    <string name="New">新建</string>
    <string name="back">退出</string>
    <string name="share">分享</string>
    <string name="paragraph_content">段落内容</string>
    <string name="submit_paragraph">提交本段</string>
    <string name="selections">选项</string>
    <string name="upload_title">上传附件</string>
    <string name="upload_begin">上传</string>
    <string name="look_pictrue">浏览</string>
    <string name="file_upload">上传附件：</string>
    <string name="task_info">查看任务</string>
    <string name="get_task">开始标注</string>
    <string name="file_list">文件列表：</string>
    <string name="cancel_back">返回</string>
    <string name="title_activity_show_text">ShowTextActivity</string>
    <string name="before_paragraph">上一页</string>
    <string name="next_paragraph">下一页</string>
    <string name="files">文件列表</string>
    <string name="settings">设置</string>
    <string name="end_task">结束该文档</string>
    <string name="search">查询</string>
    <string name="notification">通知信息.......</string>
    <string name="chooseTheOne">选中本段</string>
    <string name="cancelTheOne">取消选中</string>
    <string name="no_tasks">暂无任务信息</string>
    <string name="activity_title">众包文本标注平台</string>
    <string name="task_list_action_bar"> 任务列表 </string>
    <string name="my_task_action_bar">我的任务</string>
    <string name="task_detail_action_bar">任务详情</string>
    <string name="large_text">
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="drawer_open">Drawer is opened</string>
    <string name="drawer_close">Drawer is closed</string>
    <string name="global_title">推酷</string>
    <string name="comment_title">请输入您的评价：</string>
    <string name="comment_submit">提交</string>
    <string name="comment_score">输入评价分数</string>
    <string name="comment_hide_keyboard">收起键盘</string>
    <string name="comment_hint">#还不错 #相当好 #真好看</string>
    <string name="comment_open_keyboard">打开键盘</string>
    <string name="title_activity_file_detail">文件预览</string>
    <string name="dummy_button">Dummy Button</string>
</resources>