<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.example.kongmin.myapplication.com.example.kongmin.view.AddListActivity"
             android:id="@+id/message_root">
<ScrollView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/scrollView">
    <LinearLayout android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:id="@+id/layout"
              android:layout_margin="10dp">
    <LinearLayout

            android:layout_width="fill_parent"

            android:layout_height="40dp"

            android:layout_gravity="center"

            android:background="#ededed"

            android:gravity="center_vertical"

            android:paddingLeft="10dip"

            android:paddingRight="10dip" >

         
        <TextView

                android:id="@+id/cancel"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_weight="1"

                android:background="@drawable/selector_message_button"

                android:gravity="center"

                android:padding="5dip"

                android:text="@string/cancel_back"

                android:textColor="@color/tab_indicator" />

         
        <TextView

                android:id="@+id/title"

                android:layout_width="0dip"

                android:layout_height="fill_parent"

                android:layout_weight="10"

                android:gravity="center"

                android:text="@string/upload_title"

                android:textColor="@color/blank" />

         
        <TextView

                android:id="@+id/upload"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_weight="1"

                android:background="@drawable/selector_message_button"

                android:gravity="center"

                android:padding="5dip"

                android:text="@string/upload_begin"

                android:textColor="@color/tab_indicator" />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/textView1"
                android:textSize="18sp"
                android:textColor="#636363"
                android:layout_marginTop="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="标题：" />

        <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:paddingLeft="5dp"
                android:textColor="#626366"
                android:background="@null"
                android:textSize="18sp"
                android:ems="10">
            <requestFocus />
        </EditText>
    </LinearLayout>
        <View  android:layout_height="1px"
               android:layout_width="match_parent"
               android:background="#d9d9d9"
        />
        <View  android:layout_height="1px"
               android:layout_width="match_parent"
               android:background="#d9d9d9" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/typename"
                android:textSize="18sp"
                android:textColor="#636363"
                android:layout_marginTop="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="任务类型：" />

        <EditText
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:paddingLeft="5dp"
                android:textColor="#626366"
                android:background="@null"
                android:textSize="18sp"
                android:ems="10">
            <requestFocus />
        </EditText>
    </LinearLayout>
        <View  android:layout_height="1px"
               android:layout_width="match_parent"
               android:background="#d9d9d9" />
        <View  android:layout_height="1px"
               android:layout_width="match_parent"
               android:background="#d9d9d9" />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/tagname"
                    android:textSize="18sp"
                    android:textColor="#636363"
                    android:layout_marginTop="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="标签：" />
            <EditText
                    android:id="@+id/tag"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:paddingLeft="5dp"
                    android:textColor="#626366"
                    android:background="@null"
                    android:textSize="18sp"
                    android:ems="10"/>

            <!--<EditText
                    android:id="@+id/tag"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:paddingLeft="5dp"
                    android:textColor="#626366"
                    android:background="@null"
                    android:textSize="18sp"
                    android:ems="10">
                <requestFocus />
            </EditText>-->
            <com.example.kongmin.util.Flowlayout
                    android:id="@+id/tag_layout"
                    android:layout_marginTop="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
            </com.example.kongmin.util.Flowlayout>
        </LinearLayout>
        <View  android:layout_height="1px"
               android:layout_width="match_parent"
               android:background="#d9d9d9" />
        <View  android:layout_height="1px"
               android:layout_width="match_parent"
               android:background="#d9d9d9" />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/deadlinename"
                    android:textSize="18sp"
                    android:textColor="#636363"
                    android:layout_marginTop="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="截止日期：" />

            <EditText
                    android:id="@+id/deadline"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:paddingLeft="5dp"
                    android:textColor="#626366"
                    android:background="@null"
                    android:textSize="18sp"
                    android:ems="10">
                <requestFocus />
            </EditText>
        </LinearLayout>
        <View  android:layout_height="1px"
               android:layout_width="match_parent"
               android:background="#d9d9d9" />
        <View  android:layout_height="1px"
               android:layout_width="match_parent"
               android:background="#d9d9d9" />
        <!--<TextView
                android:id="@+id/textView2"
                android:textSize="20sp"
                android:textColor="#636363"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content" />-->

        <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:textColor="#626366"
                android:background="@null"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="5dp"
                android:paddingLeft="5dp" />
    </LinearLayout>
    <!--<com.example.kongmin.util.FlowGroupView
            android:id="@+id/flowgroupview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    </com.example.kongmin.util.FlowGroupView>-->
    <!--<Button
            android:id="@+id/btn_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="添加标签"
    />-->

        <!--<TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/label"
                  android:paddingLeft="10dp"
                  android:paddingRight="10dp"
                  android:layout_marginTop="8dp"
                  android:layout_marginBottom="8dp"
                  android:paddingTop="5dp"
                  android:paddingBottom="5dp"
                  android:layout_marginLeft="5dp"
                  android:layout_marginRight="5dp"
                  android:textSize="13sp"
                  android:textColor="#FFFFFF"
                  android:text="测试"
                  android:background="@drawable/red_sold_round_sel">

        </TextView>-->
        <!--<TagTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/ttv_main"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="测试"
            />-->

        <!--<LinearLayout
               android:layout_width="fill_parent"
               android:layout_height="40dp"
               android:layout_marginLeft="10dip"
               android:layout_marginRight="10dip"
               android:gravity="center"
               android:orientation="horizontal" > 
          <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="40dp"
                   android:gravity="right|center_vertical"
                   android:text="@string/file_upload" /> 
        <EditText
                android:id="@+id/file_path"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:singleLine="true"
                android:gravity="center_vertical"
                android:inputType="text"
                android:hint="上传附件"/>
        <Button
                android:id="@+id/buttonLoadPicture"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:layout_gravity="right|center_vertical"
                android:background="@drawable/selector_message_button"
                android:text="@string/look_pictrue" >
        </Button>
    </LinearLayout> -->

    <!--<ImageButton
            android:id="@+id/saveButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_complete"
            android:alpha="70"
            android:background="#00ffffff"
            android:layout_margin="10dp"
            android:layout_gravity="center"/>-->
    <!-- app:elevation="8dp"  elevation属性来给FloatingActionBar指定一个高度值，值越大，投影范围越大，投影效果越淡-->
    <!--<android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fab"
            android:layout_margin="16dp"
            android:layout_gravity="bottom|end"
            android:src="@drawable/ic_fujian"
            app:elevation="8dp"/>-->

</LinearLayout>
</ScrollView>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

        <com.example.kongmin.view.SlideBottomLayout
                android:id="@+id/slideLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="200dp"
                app:handler_height="50dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

               <!-- <TextView
                        android:id="@+id/handle"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="#d95858"
                        android:gravity="center"
                        android:text="handle"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />-->
                <LinearLayout
                        android:layout_height="wrap_content"
                        android:id="@+id/llybuttom"
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true">
                    <ImageView
                            android:id="@+id/img_float"
                            android:layout_width="40dp"
                            android:layout_height="50dp"
                            android:layout_alignParentBottom="true"
                            android:layout_gravity="right|bottom"
                            android:layout_marginBottom="5dp"
                            android:layout_marginRight="5dp"
                            android:src="@drawable/ic_fujian" />
                </LinearLayout>

                <!--<android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                </android.support.v7.widget.RecyclerView>-->
                <LinearLayout
                        android:id="@+id/pop_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:layout_alignParentBottom="true"
                        android:background="#F5F5F5">

                    <View  android:layout_height="1px"
                           android:layout_width="match_parent"
                           android:background="#d9d9d9"
                    />
                    <View  android:layout_height="1px"
                           android:layout_width="match_parent"
                           android:background="#d9d9d9"
                    />
                    <ImageView
                            android:id="@+id/sc_fujianimg"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentBottom="true"
                            android:layout_gravity="right"
                            android:layout_marginBottom="5dp"
                            android:layout_marginRight="5dp"
                            android:src="@drawable/scan_fujian" />
                    <View  android:layout_height="1px"
                           android:layout_width="match_parent"
                           android:background="#d9d9d9"
                    />
                    <FrameLayout
                            android:id="@+id/content_frame"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:background="#F5F5F5">
                        <ScrollView android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:id="@+id/filescrollview">
                            <LinearLayout android:layout_width="match_parent"
                                          android:layout_height="match_parent"
                                          android:orientation="vertical"
                                          android:id="@+id/filelinearlayout">

                            </LinearLayout>


                        </ScrollView>
                    </FrameLayout>

                </LinearLayout>

            </LinearLayout>

        </com.example.kongmin.view.SlideBottomLayout>

    </RelativeLayout>
</RelativeLayout>